# flap-os

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: main.py  mcp_config.py  requirements.txt
backend/agents/: browser_agent.py  coder_agent.py  flap_core.py  rag_agent.py  reflection.py  research_agent.py  supervisor.py  terminal_agent.py
backend/memory/: clipboard_watcher.py  mem0_store.py  screenpipe_client.py
backend/router/: llm_router.py
backend/telegram/: bot.py
backend/tools/: agent_s2_bridge.py  computer_control.py  terminal_manager.py
backend/voice/: stt.py  tts.py  wake_word.py
frontend/: package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: app.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/lib/: AgentView.svelte  ChatView.svelte  MemoryView.svelte  ParticleBackground.svelte  SettingsView.svelte  TerminalView.svelte
frontend/src/stores/: app.ts
mcp-servers/: flap_mcp_server.py
scripts/: setup_ubuntu.sh  tailscale_setup.sh
scripts/systemd/: flap-compose.service  screenpipe.service
terminal-server/: index.js  package-lock.json  package.json
tests/: test_phase10_mcp_server.py  test_phase11_frontend_scaffold.py  test_phase12_deployment_assets.py  test_phase1_scaffold.py  test_phase2_llm_router.py  test_phase3_flap_core_and_main.py  test_phase4_memory_stack.py  test_phase5_computer_control.py  test_phase6_terminal_manager.py  test_phase7_langgraph_agents.py  test_phase8_telegram_bot.py  test_phase9_voice_pipeline.py
(+2 files in other folders)
